--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,16 @@
             "mainClass": "com.example.atividade_31_03_2020.DemoApplication",
             "projectName": "atividade_31_03_2020",
             "args": ""
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-DemoApplication<atividade_07_04_2020>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "mainClass": "com.example.atividade_07_04_2020.DemoApplication",
+            "projectName": "atividade_07_04_2020",
+            "args": ""
         }
     ]
 }
