--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,16 @@
             "mainClass": "com.example.atividade_07_04_2020.DemoApplication",
             "projectName": "atividade_07_04_2020",
             "args": ""
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-DemoApplication<atividade_2_ac1>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "mainClass": "com.example.atividade_2_ac1.DemoApplication",
+            "projectName": "atividade_2_ac1",
+            "args": ""
         }
     ]
 }
